--- a/InspectionSchedulerIpad/InspectionTableCellView.xib
+++ b/InspectionSchedulerIpad/InspectionTableCellView.xib
@@ -50,7 +50,7 @@
 							<object class="IBUILabel" id="443282760">
 								<reference key="NSNextResponder" ref="159815654"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{220, 20}, {356, 21}}</string>
+								<string key="NSFrame">{{12, 16}, {518, 42}}</string>
 								<reference key="NSSuperview" ref="159815654"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -58,10 +58,10 @@
 								<int key="IBUITag">1</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<object class="NSFont" key="IBUIFont" id="822031474">
+								<string key="IBUIText">Address</string>
+								<object class="NSFont" key="IBUIFont" id="480117667">
 									<string key="NSName">TrebuchetMS</string>
-									<double key="NSSize">17</double>
+									<double key="NSSize">36</double>
 									<int key="NSfFlags">16</int>
 								</object>
 								<object class="NSColor" key="IBUITextColor" id="85958104">
@@ -72,10 +72,40 @@
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
 							</object>
-							<object class="IBUILabel" id="525413135">
+							<object class="IBUIImageView" id="60375717">
+								<reference key="NSNextResponder" ref="159815654"/>
+								<int key="NSvFlags">256</int>
+								<string key="NSFrame">{{576, 0}, {69, 69}}</string>
+								<reference key="NSSuperview" ref="159815654"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">4</int>
+								<bool key="IBUIMultipleTouchEnabled">YES</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">icon_bedroom.png</string>
+								</object>
+							</object>
+							<object class="IBUIImageView" id="868310353">
+								<reference key="NSNextResponder" ref="159815654"/>
+								<int key="NSvFlags">256</int>
+								<string key="NSFrame">{{686, 0}, {70, 70}}</string>
+								<reference key="NSSuperview" ref="159815654"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">4</int>
+								<bool key="IBUIMultipleTouchEnabled">YES</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">icon_pa.png</string>
+								</object>
+							</object>
+							<object class="IBUILabel" id="549336129">
 								<reference key="NSNextResponder" ref="159815654"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{706, 14}, {42, 21}}</string>
+								<string key="NSFrame">{{545, 17}, {34, 36}}</string>
 								<reference key="NSSuperview" ref="159815654"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -83,17 +113,21 @@
 								<int key="IBUITag">2</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUIFont" ref="822031474"/>
-								<reference key="IBUITextColor" ref="85958104"/>
+								<string key="IBUIText">0</string>
+								<reference key="IBUIFont" ref="480117667"/>
+								<object class="NSColor" key="IBUITextColor" id="652464750">
+									<int key="NSColorSpace">2</int>
+									<bytes key="NSRGB">MC42ODYyNzQ1Mjg1IDAuMDYyNzQ1MTAxNzUgMC4zODAzOTIxOTM4AA</bytes>
+								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">2</int>
 							</object>
-							<object class="IBUILabel" id="24986368">
+							<object class="IBUILabel" id="663763059">
 								<reference key="NSNextResponder" ref="159815654"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{267, 43}, {431, 116}}</string>
+								<string key="NSFrame">{{655, 16}, {34, 36}}</string>
 								<reference key="NSSuperview" ref="159815654"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -101,20 +135,102 @@
 								<int key="IBUITag">3</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-								<string key="IBUIText">Label</string>
-								<reference key="IBUIFont" ref="822031474"/>
-								<reference key="IBUITextColor" ref="85958104"/>
+								<string key="IBUIText">0</string>
+								<reference key="IBUIFont" ref="480117667"/>
+								<reference key="IBUITextColor" ref="652464750"/>
 								<nil key="IBUIHighlightedColor"/>
 								<int key="IBUIBaselineAdjustment">1</int>
 								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">2</int>
+							</object>
+							<object class="IBUILabel" id="302786873">
+								<reference key="NSNextResponder" ref="159815654"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{133, 93}, {200, 43}}</string>
+								<reference key="NSSuperview" ref="159815654"/>
+								<object class="NSColor" key="IBUIBackgroundColor" id="744399750">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MCAwAA</bytes>
+								</object>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">4</int>
+								<int key="IBUITag">4</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<string key="IBUIText">12:30 - 13:00</string>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">TrebuchetMS</string>
+									<double key="NSSize">24</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4wNzA2NTIxNzM5MSAwLjA3MDY1MjE3MzkxIDAuMDcwNjUyMTczOTEAA</bytes>
+								</object>
+								<reference key="IBUIHighlightedColor" ref="85958104"/>
+								<reference key="IBUIShadowColor" ref="85958104"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
+							</object>
+							<object class="IBUILabel" id="923362253">
+								<reference key="NSNextResponder" ref="159815654"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{-16, 93}, {200, 43}}</string>
+								<reference key="NSSuperview" ref="159815654"/>
+								<reference key="IBUIBackgroundColor" ref="744399750"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">4</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<string key="IBUIText">Inspection:</string>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">TrebuchetMS-Bold</string>
+									<double key="NSSize">24</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4wNzA2NTIxNzM5MSAwLjA3MDY1MjE3MzkxIDAuMDcwNjUyMTczOTEAA</bytes>
+								</object>
+								<reference key="IBUIHighlightedColor" ref="85958104"/>
+								<reference key="IBUIShadowColor" ref="85958104"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
+							</object>
+							<object class="IBUILabel" id="614986403">
+								<reference key="NSNextResponder" ref="159815654"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{545, 69}, {230, 57}}</string>
+								<reference key="NSSuperview" ref="159815654"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<bool key="IBUIClipsSubviews">YES</bool>
+								<int key="IBUIContentMode">7</int>
+								<int key="IBUITag">5</int>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+								<string key="IBUIText">$500.00</string>
+								<object class="NSFont" key="IBUIFont">
+									<string key="NSName">TrebuchetMS-Bold</string>
+									<double key="NSSize">36</double>
+									<int key="NSfFlags">16</int>
+								</object>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MCAwLjUwMTk2MDgxNCAwAA</bytes>
+								</object>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">1</int>
+								<float key="IBUIMinimumFontSize">10</float>
+								<int key="IBUITextAlignment">1</int>
 							</object>
 						</object>
 						<string key="NSFrameSize">{768, 200}</string>
 						<reference key="NSSuperview" ref="629895347"/>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MCAwAA</bytes>
-						</object>
+						<reference key="IBUIBackgroundColor" ref="744399750"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">4</int>
@@ -172,9 +288,14 @@
 						<reference key="object" ref="629895347"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="60375717"/>
+							<reference ref="868310353"/>
+							<reference ref="549336129"/>
+							<reference ref="663763059"/>
+							<reference ref="614986403"/>
+							<reference ref="923362253"/>
 							<reference ref="443282760"/>
-							<reference ref="525413135"/>
-							<reference ref="24986368"/>
+							<reference ref="302786873"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -184,13 +305,38 @@
 						<reference key="parent" ref="629895347"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">7</int>
-						<reference key="object" ref="525413135"/>
+						<int key="objectID">12</int>
+						<reference key="object" ref="60375717"/>
 						<reference key="parent" ref="629895347"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">8</int>
-						<reference key="object" ref="24986368"/>
+						<int key="objectID">13</int>
+						<reference key="object" ref="868310353"/>
+						<reference key="parent" ref="629895347"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">17</int>
+						<reference key="object" ref="549336129"/>
+						<reference key="parent" ref="629895347"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">18</int>
+						<reference key="object" ref="663763059"/>
+						<reference key="parent" ref="629895347"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">19</int>
+						<reference key="object" ref="302786873"/>
+						<reference key="parent" ref="629895347"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">21</int>
+						<reference key="object" ref="614986403"/>
+						<reference key="parent" ref="629895347"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">22</int>
+						<reference key="object" ref="923362253"/>
 						<reference key="parent" ref="629895347"/>
 					</object>
 				</object>
@@ -201,19 +347,25 @@
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>-1.CustomClassName</string>
 					<string>-2.CustomClassName</string>
+					<string>17.IBPluginDependency</string>
+					<string>18.IBPluginDependency</string>
+					<string>19.IBPluginDependency</string>
+					<string>21.IBPluginDependency</string>
+					<string>22.IBPluginDependency</string>
 					<string>3.IBEditorWindowLastContentRect</string>
 					<string>3.IBPluginDependency</string>
 					<string>5.IBPluginDependency</string>
-					<string>7.IBPluginDependency</string>
-					<string>8.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
 					<string>DetailViewController</string>
 					<string>UIResponder</string>
-					<string>{{473, 621}, {768, 200}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>{{610, 455}, {768, 200}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				</object>
@@ -234,7 +386,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">8</int>
+			<int key="maxID">22</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -501,6 +653,14 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
+					<string key="className">UIImageView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">UIKit.framework/Headers/UIImageView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
 					<string key="className">UILabel</string>
 					<string key="superclassName">UIView</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
@@ -603,6 +763,19 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<string key="IBDocument.LastKnownRelativeProjectPath">InspectionSchedulerIpad.xcodeproj</string>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
+		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<bool key="EncodedWithXMLCoder">YES</bool>
+			<object class="NSArray" key="dict.sortedKeys">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<string>icon_bedroom.png</string>
+				<string>icon_pa.png</string>
+			</object>
+			<object class="NSMutableArray" key="dict.values">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<string>{69, 69}</string>
+				<string>{70, 70}</string>
+			</object>
+		</object>
 		<string key="IBCocoaTouchPluginVersion">117</string>
 	</data>
 </archive>
